--- a/documentation/styles.css
+++ b/documentation/styles.css
@@ -1,3 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 body {
     font-family: 'Open Sans', Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.5;
+    width: 100vw;
+}
+
+header {
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+#navbar {
+    background-color: white;
+    overflow: scroll;
+}
+
+#navbar header {
+    background-color: white;
+    width: 100%;
+    padding: 1rem 0;
+    text-align: center;
+    
+}
+
+#navbar ul{
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    overflow: scroll;
+    height: 26%;
+    width: 100vw;
+    border: 1px solid black;
+}
+
+#navbar li{
+    list-style: none;
+    padding: 0.8rem 2rem;
+    border-top: 1px solid black;
+    /* background-color: green; */
+}
+
+#navbar a {
+    text-decoration: none;
+    color: black;
+}
+
+#main-doc {
+    margin: 34% 5% 5% 5%;
+}
+
+#main-doc p {
+    margin: 0.7rem;
+}
+
+#main-doc li {
+    margin-bottom: 0.7rem;
+}
+
+code {
+    margin: 1rem;
+    background-color: antiquewhite;
 }
