style: add media queries

--- a/documentation/styles.css
+++ b/documentation/styles.css
@@ -16,12 +16,12 @@ header {
 #navbar {
     background-color: white;
     overflow: scroll;
+    width: 100vw;
 }
 
 #navbar header {
     background-color: white;
-    width: 100%;
-    padding: 1rem 0;
+    padding: 0.8rem 0;
     text-align: center;
     
 }
@@ -31,25 +31,33 @@ header {
     margin: 0;
     position: absolute;
     overflow: scroll;
-    height: 26%;
+    height: 30%;
     width: 100vw;
     border: 1px solid black;
+    background-color: white;
+    z-index: 1;
 }
 
 #navbar li{
     list-style: none;
-    padding: 0.8rem 2rem;
-    border-top: 1px solid black;
-    /* background-color: green; */
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
 }
 
 #navbar a {
+    display: inline-block;
+    width: 100vw;
     text-decoration: none;
     color: black;
+    border-top: 1px solid black;
+    padding: 0.8rem;
 }
 
 #main-doc {
-    margin: 34% 5% 5% 5%;
+    position: absolute;
+    top: 38%;
+    padding: 1.5rem;
 }
 
 #main-doc p {
@@ -62,5 +70,51 @@ header {
 
 code {
     margin: 1rem;
-    background-color: antiquewhite;
+    background-color: whitesmoke;
+    padding: 20px;
+    border-radius: 5px;
+    display: block;
+    white-space: pre-line;
+    line-height: 2rem;
+    color: darkslategray;
+}
+
+#main-doc a {
+    text-decoration: none;
+}
+
+@media only screen and (min-width: 1000px) {
+
+    body {
+        position: relative;
+    }
+
+    #navbar{
+        width: 25%;
+        position: fixed;
+        height: 100vh;
+        border: 0px;
+        border-right: 2px solid gray;
+        margin: 0;
+        padding: 0;
+    }
+
+    #navbar ul {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        /* background-color: green; */
+        border-top: 1px solid black;
+    }
+    #navbar li {
+        background-color: white;
+        margin: 0;
+        padding: 0;
+    }
+
+    #main-doc {
+        position: absolute;
+        margin-left: 25%;
+    }
+
 }
