--- a/product-landing-page/styles.css
+++ b/product-landing-page/styles.css
@@ -13,102 +13,92 @@ body {
 }
 
 header {
+    position: fixed;
+    top: 0;
     display: flex;
     justify-content: space-between;
-    margin: 1rem 5%;
-}
-
-#logo{
-    width: 20%;
-    margin: auto  0;
-}
-
-#logo img {
+    align-items: center;
+    padding: 1rem 5%;
+    background-color: #eee;
     width: 100%;
-    object-fit: cover;
 }
 
-#navbar {
+#header-img {
+    width: 300px;
+}
+
+#nav-bar {
+    width: 30%;
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: space-between;
 }
 
-.nav-items {
+.nav-link {
     display: inline-block;
-    list-style-type: none;
-    margin-left: 2rem;
-}
-
-.nav-items a {
     text-decoration: none;
     color: black;
 }
 
 main {
-    width: 60%;
-    margin: 0 auto;
+    width: 50%;
+    margin: 5rem auto 0;
 }
 
 #hero {
     text-align: center;
-    margin: 0 5%;
 }
 
 #hero h2 {
     margin: 1rem auto;
 }
 
-#hero input {
+#email {
     padding: 5px;
-    width: 20%;
+    width: 30%;
 }
 
-#hero button {
+#submit {
     display: block;
     margin: 1rem auto;
-    font-weight: 700;
     padding: 5px;
-    background-color: orange;
+    background-color: #f1c40f;
+    border: none;
 }
-
 
 #features {
-    margin: 0 5%;
-    display: flex;
-    justify-content: center;
-}
-
-#features ul {
-    width: 100%;
+    padding-top: 2rem;
 }
 
 #features li {
     list-style-type: none;
-    margin-top: 5rem;
+    margin-top: 4rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 #features i {
-    color: goldenrod;
+    color: darkorange;
     margin: 0 auto;
 }
 .description {
     display: inline-block;
-    width: 90%;
+    width: 80%;
 }
 
-#how_it_works {
+#video{
+    display: block;
     text-align: center;
-    margin: 5rem;
+    margin: 5rem auto;
+    width:480px;
+    height: 260px;
 }
 
 #products {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
+    gap: 15px;
 }
 
 .item {
@@ -117,26 +107,27 @@ main {
 }
 
 .item h2 {
-    font-weight: 700;
-    padding: 10px;
+    padding: 15px 20px;
     background-color: #ddd;
+    font-size: 1rem;
 }
 
 .price {
+    margin: 15px 0;
     font-size: 1.5rem;
     font-weight: 700;
-    margin: 10px;
 }
 
 .item p {
-    line-height: 1.5rem;
+    line-height: 1.8rem;
 }
 
 .item button {
-    padding: 5px 15px;
-    margin: 10px;
-    font-weight: 700;
-    background-color: goldenrod;
+    font-size: 1rem;
+    padding: 10px 15px;
+    margin: 30px 0 20px;
+    background-color: #f1c40f;
+    border: none;
 }
 
 footer {
@@ -154,4 +145,81 @@ footer li{
 
 .copy {
     margin-right: 2rem;
+    color: #666;
 }
+
+@media only screen and (max-width: 1440px) {
+    main {
+        width: 65%;
+    }
+}
+
+@media only screen and (max-width: 1080px) {
+    main {
+        width: 80%;
+        margin-top: 6rem;
+    }
+
+    #nav-bar{
+        flex-direction: column;
+        align-items: end;
+    }
+}
+
+
+@media only screen and (max-width: 780px) {
+    main {
+        width: 90%;
+    }
+}
+
+
+@media only screen and (max-width: 690px) {
+
+    main {
+        width: 100%;
+    }
+
+    #features, #products {
+        margin: 0 10px;
+    }
+}
+
+@media only screen and (max-width: 689px) {
+    .item {
+        grid-column: 1/-1;
+        width: 50%;
+        margin: 1rem auto;
+    }
+
+    #email {
+        width: 50%;
+    }
+
+}
+
+@media only screen and (max-width: 580px) {
+    header {
+        flex-direction: column;
+    }
+
+    .item {
+        width: 60%;
+    }
+
+    main {
+        margin-top: 8rem;
+    }
+
+    #email {
+        width: 65%;
+    }
+
+    #nav-bar {
+        flex-direction: row;
+        width:100%;
+        margin-top: 1rem;
+        justify-content: space-around;
+    }
+}
+
