--- a/personal-portfolio/styles.css
+++ b/personal-portfolio/styles.css
@@ -100,8 +100,6 @@ a {
 }
 
 
-
-
 #projects .project-image {
   height: 80%;
   width: 100%;
@@ -128,8 +126,8 @@ a {
 }
 
 .fourth-project {
-    background: url(./images/product-page.png);    
-    background-size: cover;
+    background: url(./images/portfolio.png);    
+    /* background-size: cover; */
     background-position: center;
 }
 
@@ -152,7 +150,7 @@ a {
   }
 
 #profile-link {
-    display: block;
+  display: block;
   text-align: center;
   width: 8em;
   padding: 0.8em;
