--- a/personal-portfolio/styles.css
+++ b/personal-portfolio/styles.css
@@ -85,7 +85,10 @@ a {
     display: inline-block;
     width: 100%;
     min-height: 20em;
+    color: white;
 }
+
+
 
 #projects .project-tile {
   height: 100%;
@@ -215,6 +218,10 @@ footer {
   padding-block: 3em;
   border-top: 3px solid brown;
   text-align: center;
+}
+
+footer a {
+  color: white;
 }
 
 footer a:hover {
